--- a/GlowGridDisplayTest/Base.lproj/Main.storyboard
+++ b/GlowGridDisplayTest/Base.lproj/Main.storyboard
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZAZ-dC-BA2">
-    <device id="ipad10_2" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,18 +11,18 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="DisplayViewController" customModule="GlowGridDisplayTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1080" height="810"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="pzC-yh-TuW">
-                                <rect key="frame" x="50" y="50" width="980" height="760"/>
+                                <rect key="frame" x="50" y="44" width="980" height="556"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIo-kv-ZEN" customClass="Display" customModule="GlowGridDisplayTest" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="100" width="465" height="560"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIo-kv-ZEN" customClass="GlowGridDisplay" customModule="GlowGridDisplayTest" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="100" width="465" height="356"/>
                                         <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="D4l-AB-5m4">
-                                        <rect key="frame" x="515" y="300" width="465" height="160"/>
+                                        <rect key="frame" x="515" y="198" width="465" height="160"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="NTt-kx-KiB">
                                                 <rect key="frame" x="0.0" y="0.0" width="465" height="30"/>
@@ -98,17 +96,17 @@
             <objects>
                 <viewController title="Menu View Controller" id="1Pa-zZ-9IJ" customClass="MenuViewController" customModule="GlowGridDisplayTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hdk-GB-03A">
-                        <rect key="frame" x="0.0" y="0.0" width="1080" height="810"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="TAX-c8-qTg">
-                                <rect key="frame" x="0.0" y="100" width="1080" height="660"/>
+                                <rect key="frame" x="0.0" y="94" width="600" height="456"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="154" translatesAutoresizingMaskIntoConstraints="NO" id="sc2-qT-I2U">
-                                        <rect key="frame" x="0.0" y="0.0" width="1080" height="305"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="203"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lap-ef-ixc">
-                                                <rect key="frame" x="0.0" y="0.0" width="257.5" height="305"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="97.5" height="203"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Addition"/>
                                                 <connections>
@@ -116,7 +114,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ze-bC-XGf">
-                                                <rect key="frame" x="411.5" y="0.0" width="257" height="305"/>
+                                                <rect key="frame" x="251.5" y="0.0" width="97" height="203"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Subtraction"/>
                                                 <connections>
@@ -124,7 +122,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQF-2e-QCg">
-                                                <rect key="frame" x="822.5" y="0.0" width="257.5" height="305"/>
+                                                <rect key="frame" x="502.5" y="0.0" width="97.5" height="203"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Multiplication"/>
                                                 <connections>
@@ -134,10 +132,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="154" translatesAutoresizingMaskIntoConstraints="NO" id="j5A-Jb-aHw">
-                                        <rect key="frame" x="0.0" y="355" width="1080" height="305"/>
+                                        <rect key="frame" x="0.0" y="253" width="600" height="203"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLv-BR-jMJ">
-                                                <rect key="frame" x="0.0" y="0.0" width="463" height="305"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="223" height="203"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Division"/>
                                                 <connections>
@@ -145,7 +143,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ycu-wP-pqu">
-                                                <rect key="frame" x="617" y="0.0" width="463" height="305"/>
+                                                <rect key="frame" x="377" y="0.0" width="223" height="203"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Division with Remainders"/>
                                                 <connections>
